--- a/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/values/strings.xml
+++ b/Coin_Kotlin-master/Coin_kotlin/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Coin_kotlin</string>
+    <string name="default_notification_channel_id">default_channel</string>
+    <string name="fcm_key">AAAA0b9Dx7o:APA91bGyxtDqDggU6I5gRiKxuFW6tld7cpPERm53_WkFwD7tSHZcEp8p3l6slrRQAJEk34Q8XVjJXYvUkKDBmX9y--rHCBAMr5hb-oGFukYvVkAM7Vdhrl72y822SR-LnvDGuk9oWjrZ</string>
 </resources>
